# GameOfLife

./: CMakeLists.txt  GAME_OF_LIFE.h  README.md  Simulation.c  main.c
